--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "fs": "^0.0.1-security",
+    "request": "^2.88.2"
   }
 }
