--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "request": "^2.88.2"
   }
 }
